Cucumber BDD framework with TestNG

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,15 +1,13 @@
 browser=chrome
-<<<<<<< HEAD
-osha.url=https://www.osha.gov
-osha.url1=https://portalstage.osha.gov/dte/login.jsp
+
+osha.url=https://portalstage.osha.gov/dte/login.jsp
 login.username=vmammadov
 login.psw=
 
-=======
 osha.DTE_url=https://portalstage.osha.gov/dte/login.jsp
 login.DTE_username=vmammadov
 login.DTE_psw=
 
 login.Dte_username=
 login.Dte_psw=
->>>>>>> a47670c (Cucumber BDD framework with TestNG1)
+
