--- a/configuration.properties
+++ b/configuration.properties
@@ -1,12 +1,13 @@
 browser=chrome
-osha.url=https://portalstage.osha.gov/dte/login.jsp
-
-login.username=vmammadov
-login.psw=
 
 osha.DTE_url=https://portalstage.osha.gov/dte/login.jsp
+osha.OSPADS_url=https://portalstage.osha.gov/ospads/faces/loginPage
 login.DTE_username=vmammadov
 login.DTE_psw=
+login.OSPADS_username=vmammadov
+login.OSPADS_psw=
+
+
 
 login.Dte_username=
 login.Dte_psw=
